@@ -12,6 +12,6 @@ gen_dir = @GEN_DIR@
 
 [acme]
 url_default=@ACME_DEF_URL@
-url = http://localhost:4000/directory
-tos = http://boulder:4000/terms/v1
-tos2 = http://boulder:4000/terms/v2
+url = @BOULDER_URL@
+tos = @BOULDER_TOS@
+tos2 = @BOULDER_TOS@/invalid
