@@ -1,3 +1,5 @@
+ * configure option '--with-boulder=<url>' to specify the URL of the boulder test host (defaults
+   to localhost:4000)
  * Changed default ACME CA url to letsencrypt.org staging environment when in MD_EXPERIMENTAL
    mode, adapted test outcomes to this setting
  * a2md drive command now with same checks on renewal as mod_md. New option --force to
